--- a/pie-tool-tip/src/app/app.component.html
+++ b/pie-tool-tip/src/app/app.component.html
@@ -332,5 +332,5 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<app-pie></app-pie>
 <router-outlet />
