--- a/pie-tool-tip/src/app/app.component.html
+++ b/pie-tool-tip/src/app/app.component.html
@@ -332,5 +332,6 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<app-pie></app-pie>
+<!-- <app-pie></app-pie> -->
+ <app-only-chart-js-pie></app-only-chart-js-pie>
 <router-outlet />
