--- a/pie-tool-tip/src/app/pie/pie.component.html
+++ b/pie-tool-tip/src/app/pie/pie.component.html
@@ -1,4 +1,4 @@
-<div style="position: relative">
+<!-- <div style="position: relative">
   <canvas
     baseChart
     [type]="'pie'"
@@ -36,3 +36,4 @@
     </table>
   </div>
 </div>
+ -->
